<resources>

    <string name="app_name">LunchList</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">LunchList</string>
    <string name="name_label">Name: </string>
    <string name="name_hint">Restaurant Name&#8230;</string>
    <string name="address_label">Address: </string>
    <string name="address_hint">Restaurant Address&#8230;</string>
    <string name="save_btn">Save</string>
    <string name="type">Type: </string>
    <string name="type_out">Take-Out</string>
    <string name="type_in">Dine-In</string>
    <string name="type_del">Delivery</string>
    <string name="restaurant_icon_desc">Type of dining</string>
    <string name="notes_hint">Notes</string>
    <string name="feed_hint">RSS Feed</string>
    <string name="feed_title">RSS Feed</string>
    <string name="add">Add Restaurant</string>
    <string name="details_form_tip">
    	Click the MENU button to add a restuarant!"
    </string>
    <string name="sort_order">Sort Order</string>
    <string name="sort_order_summary">
    	Choose the oreder that the restaurant list should use
    </string>
    <string name="sort_order_dialog">Choose a sort order</string>
    <string name="prefs_title">Settings</string>
    <string name="location">Location: </string>
    <string name="location_label">(not set)</string>
    <string name="location_option">Save Location</string>
    <string name="map_menu">Show on Map</string>
    <string name="alarm_cb">Sound a Lunch Alarm</string>
    <string name="alarm_cb_summary">
    		Check if you want to know when it is time for lunch
    </string>
    <string name="alarm_time">Lunch Alarm Time</string>
    <string name="alarm_time_summary">
    		Set your desired time for the lunch alarm
    </string>
    <string name="alarm_activity">It\'s time for lunch!</string>
    <string name="notification_title">Use a notification</string>
    <string name="notification_summary">
    		Check if you want a status bar icon at lunchtime,
    		or uncheck for a full-screen notice
    </string>
    <string name="empty">No restuarants!</string>
    <string name="help">Help</string>
    <string name="ringtone_summary">
    		Indictate the rington to play when it is lunchtime
    </string>
    <string name="phone">Phone: </string>
    <string name="call">Call</string>

</resources>