<PreferenceScreen 
		xmlns:android="http://schemas.android.com/apk/res/android" >
	<ListPreference 
			android:key="sort_order"
			android:title="@string/sort_order"
			android:summary="@string/sort_order_summary"
			android:entries="@array/sort_names"
			android:entryValues="@array/sort_clauses"
			android:dialogTitle="@string/sort_order_dialog" />
	<CheckBoxPreference
			android:key="alarm"
			android:title="@string/alarm_cb"
			android:summary="@string/alarm_cb_summary" />
	<csci498.trevorwhitney.lunchlist.TimePreference
			android:key="alarm_time"
			android:title="@string/alarm_time"
			android:summary="@string/alarm_time_summary"
			android:defaultValue="12:00"
			android:dependency="alarm" />
	<CheckBoxPreference 
			android:key="use_notification"
			android:title="@string/notification_title"
			android:defaultValue="true"
			android:summary="@string/notification_summary"
			android:dependency="alarm" />
</PreferenceScreen>