<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/flipper"
	android:layout_height="match_parent"
	android:layout_width="match_parent" >
			
	<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="vertical" >
			<Button android:id="@+id/view_details"
					android:text="@string/view_details"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" />
			<ListView android:id="@+id/restaurant_list"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
	</LinearLayout>
	
	<TableLayout android:id="@+id/details_form"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:shrinkColumns="1"
		android:stretchColumns="1"
		android:paddingTop="4dip" >
			
		<Button android:id="@+id/view_list"
			android:text="@string/view_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
		<TableRow>
			<TextView android:text="@string/name_label" />
			<EditText
					android:id="@+id/name"
					android:hint="@string/name_hint" >
			</EditText>
		</TableRow>
		
		<TableRow>
			<TextView android:text="@string/address_label" />
			<EditText
					android:id="@+id/address"
					android:hint="@string/address_hint" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/type" />
			<RadioGroup android:id="@+id/types" >
					<RadioButton
							android:id="@+id/type_out"
							android:checked="true"
							android:text="@string/type_out" />
					<RadioButton
							android:id="@+id/type_in"
							android:text="@string/type_in" />
					<RadioButton
							android:id="@+id/type_del"
							android:text="@string/type_del" />
			</RadioGroup>
		</TableRow>

		<Button
				android:id="@+id/save_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/save_btn" />

	</TableLayout>
</ViewFlipper>